# Tevian

./: CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui  meta.cpp  meta.h  mygraphicsview.cpp  mygraphicsview.h  myitem.cpp  myitem.h  myview.cpp  myview.h  qt5-image-viewer.pro  rest.cpp  rest.h  untitled10.pro
